Quick fix to profile image distortion issue in Firefox. Tested in Chrome, Firefox, Opera, and Safari. Needs testing in IE.

--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ a:visited {
   margin-top: 5px;
 }
 
+section {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 h2 {
   width: 100%;
   text-align: center;
@@ -119,14 +127,22 @@ h2 {
   /*background-color: #000;*/
 }
 
-#profile_image {
-  max-width: 450px;
-  max-height: 450px;
-  width: 100%;
-  height: 100%;
-  border-radius:50%;
+#profile_image_container {
+  /*width: 100%;*/
+  max-width: 550px;
   margin: 10px auto 10px auto;
+}
+
+#profile_image {
+  /*max-width: 450px;*/
+  /*max-height: 450px;*/
+  width: 100%;
+  /*height: 100%;*/
+  border-radius:50%;
+  /*margin-left: 50px;
+  margin-right: 50px;*/
   padding: 0 50px 0 50px;
+  /*object-fit: scale-down;*/
 }
 
 .anchor {
@@ -144,14 +160,6 @@ h2 {
   top: -80px;
   visibility: hidden;
 }*/
-
-section {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
 
 /*.background_images {
   display: block;
